--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -26,6 +29,7 @@ header {
 }
 
 main {
+  flex: 1;
   margin-top: 48px;
   text-align: center;
 }
