--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,20 @@ main {
   background-color: #eb4b5b;
 }
 
+#main-content-list .btn-watch:hover {
+  box-shadow: 0px 0px 10px 5px #ba042d;
+}
+
 #main-content-list .btn-add {
   margin-top: 20px;
   padding: 8px 63px;
   border: 1px solid #eb4b5b;
   color: darkslategrey;
+}
+
+#main-content-list .btn-add:hover {
+  box-shadow: 0px 0px 10px 5px #edceb5;
+  border: 1px solid #edceb5;
 }
 
 footer {
@@ -80,4 +89,8 @@ footer {
 .btn-footer {
   border-bottom: 1px dashed white;
   color: white;
+}
+
+.btn-footer:hover {
+  color: #4240d4;
 }
